push 백그라운드 앱완전 종료 되었다 진입시 죽는 문제

--- a/ParkingGo/GoogleService-Info.plist
+++ b/ParkingGo/GoogleService-Info.plist
@@ -19,16 +19,18 @@
 	<key>STORAGE_BUCKET</key>
 	<string>parkinggo-b1a2c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:853625059658:ios:56f06e78f6b579cd9a29b3</string>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 </dict>
 </plist>
